# FirecrawlChallenge

./: .gitignore  CHALLENGEDOC.md  ONEPAGER.md  README.md  docker-compose.override.yaml.example  docker-compose.yaml  pyrightconfig.json
backend/api/: Dockerfile  Dockerfile.local  pyproject.toml  start-reload.sh
backend/api/app/: db.py  main.py
backend/api/app/constants/: code_splitter.py
backend/api/app/controllers/: actions_debug_controller.py  code_block_debug_controller.py  debug_controller.py
backend/api/app/helpers/: auth.py  firecrawl.py
backend/api/app/models/: __init__.py  action_compiler.py  code_splitter.py  db_models.py  schemas.py  scrape_actions.py
backend/api/app/repositories/: extractors.py  repair_attempts.py  runs.py
backend/api/app/routers/: debug.py  extractors.py  firecrawl.py  health.py
backend/api/app/services/: actions_compiler.py  agent_runner.py  code_split_result_builder.py  code_splitter.py  debug_runner.py  extraction_service.py  firecrawl_client.py  repair_engine.py  schema_validator.py
backend/api/scripts/: demo_debug_run.py
backend/api/tests/: conftest.py  test_actions_compiler.py  test_auth.py  test_code_splitter.py  test_extraction_service.py  test_repair_engine.py  test_schema_validator.py  test_schemas.py
data/: accounts.csv  tickets.csv
frontend/: .dockerignore  Dockerfile  Dockerfile.local  next.config.js  package-lock.json  package.json  theme.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/providers/: ThemeRegistry.tsx
frontend/lib/: api.ts
supabase/migrations/: 001_initial_schema.sql
