[tool.poetry]
name = "api"
version = "0.1.0"
description = "Firecrawl Challenge Backend API"
authors = ["Dongjoo Lee <dj980907@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.0.0"
httpx = "^0.27.0"
firecrawl-py = "^4.30.0"
anthropic = "^0.111.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
